Added redirect and toml files

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="hero-inner">
                         <div class="hero-copy">
                             <h1 class="hero-title mt-0 is-revealing">Simple URL Shortener</h1>
-                            <p class="hero-paragraph is-revealing">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
+                            <p class="hero-paragraph is-revealing">MAVN Click Finder is a free, simple, and easy-to-use tool to shorten any long URL into something easier to remember and share.</p>
                             <div class="hero-form field field-grouped is-revealing">
                                 <div class="control control-expanded">
                                     <input class="input" type="url" id="urlinput" placeholder="Paste your long URL">
