--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MAVN Click Finder - URL Shortener</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,400i,500,700|Titillium+Web:600" rel="stylesheet">
-    <link rel="stylesheet" href="dist/css/style.css">
-    <script src="dist/js/head.js"></script>
-    <script src="dist/js/scrollreveal.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/head.js"></script>
+    <script src="js/scrollreveal.js"></script>
 </head>
 <body class="is-boxed">
     <div class="body-wrap boxed-container">
@@ -461,7 +461,7 @@
             </div>
         </footer>
     </div>
-    <script src="dist/js/index.js"></script>
-    <script src="dist/js/main.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
