--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="brand header-brand">
                         <h1 class="m-0">
                             <a href="#">
-                                <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="32" height="32" viewBox="0 0 32 32">
                                     <title>MAVN</title>
                                     <defs>
                                         <linearGradient x1="0%" y1="0%" y2="100%" id="logo-a">
@@ -71,7 +71,7 @@
                         </div>
                         <div class="hero-illustration">
                             <div class="hero-bg">
-                                <svg width="720" height="635" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="720" height="635">
                                     <defs>
                                         <linearGradient x1="50%" y1="0%" x2="50%" y2="97.738%" id="a">
                                             <stop stop-color="#151616" offset="0%"/>
@@ -82,7 +82,7 @@
                                 </svg>
                             </div>
                             <div class="hero-square hero-square-1 is-moving-object is-rotating">
-                                <svg width="220" height="220" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="220" height="220">
                                     <defs>
                                         <linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="square-1-a">
                                             <stop stop-color="#4353FF" offset="0%"/>
@@ -102,7 +102,7 @@
                                 </svg>
                             </div>
                             <div class="hero-square hero-square-2 is-moving-object is-rotating">
-                                <svg width="88" height="88" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="88" height="88">
                                     <defs>
                                         <linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="square-2-a">
                                             <stop stop-color="#4353FF" offset="0%"/>
@@ -120,7 +120,7 @@
                                 </svg>
                             </div>
                             <div class="hero-square hero-square-3 is-moving-object is-rotating">
-                                <svg width="64" height="64" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="64" height="64">
                                     <defs>
                                         <linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="square-3-a">
                                             <stop stop-color="#4353FF" offset="0%"/>
@@ -138,7 +138,7 @@
                                 </svg>
                             </div>
                             <div class="hero-square hero-square-4 is-moving-object is-rotating">
-                                <svg width="320" height="320" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="320" height="320">
                                     <defs>
                                         <linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="square-4-a">
                                             <stop stop-color="#4353FF" offset="0%"/>
@@ -177,7 +177,7 @@
                                 </svg>
                             </div>
                             <div class="hero-square hero-square-5 is-moving-object is-rotating">
-                                <svg width="141" height="140" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="141" height="140">
                                     <defs>
                                         <linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="square-5-a">
                                             <stop stop-color="#4353FF" offset="0%"/>
@@ -201,7 +201,7 @@
                                 </svg>
                             </div>
                             <div class="hero-square hero-square-6 is-moving-object is-rotating">
-                                <svg width="128" height="128" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="128" height="128">
                                     <defs>
                                         <linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="square-6-a">
                                             <stop stop-color="#4353FF" offset="0%"/>
@@ -230,7 +230,7 @@
                                 </svg>
                             </div>
                             <div class="hero-square hero-square-7 is-moving-object is-rotating">
-                                <svg width="64" height="64" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="64" height="64">
                                     <defs>
                                         <linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="square-7-a">
                                             <stop stop-color="#4353FF" offset="0%"/>
@@ -254,7 +254,7 @@
                                 </svg>
                             </div>
                             <div class="hero-square hero-square-8 is-moving-object is-rotating">
-                                <svg width="40" height="40" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="40" height="40">
                                     <defs>
                                         <linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="square-8-a">
                                             <stop stop-color="#4353FF" offset="0%"/>
@@ -272,7 +272,7 @@
                                 </svg>
                             </div>
                             <div class="hero-dots hero-dots-1 is-moving-object is-translating" data-translating-factor="160">
-                                <svg width="279" height="97" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="279" height="97">
                                     <g fill="#43F1FF" fill-rule="evenodd">
                                         <path d="M71.686 0l-2.899 1.334L68 4.157l.926 2.688L71.686 8l2.6-1.31L76 4.156l-1.295-2.94z"/>
                                         <path fill-opacity=".64" d="M38.843 2l-1.45.667L37 4.079l.463 1.344 1.38.577 1.3-.655L41 4.079l-.648-1.47z"/>
@@ -289,7 +289,7 @@
                                 </svg>
                             </div>
                             <div class="hero-dots hero-dots-2 is-moving-object is-translating" data-translating-factor="120">
-                                <svg width="138" height="132" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="138" height="132">
                                     <g fill="#43F1FF" fill-rule="evenodd">
                                         <path d="M73.686 66l-2.899 1.334L70 70.157l.926 2.688L73.686 74l2.6-1.31L78 70.156l-1.295-2.94z"/>
                                         <path fill-opacity=".64" d="M108.843 0l-1.45.667L107 2.079l.463 1.344 1.38.577 1.3-.655.857-1.266-.648-1.47z"/>
@@ -306,7 +306,7 @@
                                 </svg>
                             </div>
                             <div class="hero-dots hero-dots-3 is-moving-object is-translating" data-translating-factor="160">
-                                <svg width="98" height="59" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="98" height="59">
                                     <g fill="#43F1FF" fill-rule="evenodd">
                                         <path d="M26.314 0l2.899 1.334L30 4.157l-.926 2.688L26.314 8l-2.6-1.31L22 4.156l1.295-2.94z"/>
                                         <path fill-opacity=".64" d="M59.157 2l1.45.667L61 4.079l-.463 1.344-1.38.577-1.3-.655L57 4.079l.648-1.47z"/>
@@ -320,7 +320,7 @@
                                 </svg>
                             </div>
                             <div class="hero-line hero-line-1">
-                                <svg width="344" height="217" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="344" height="217">
                                     <defs>
                                         <linearGradient x1="18.74%" y1="17.384%" x2="96.787%" y2="88.669%" id="line-1-a">
                                             <stop stop-color="#5D6AFF" stop-opacity="0" offset="0%"/>
@@ -343,7 +343,7 @@
                                 <div class="feature-inner">
                                     <div class="feature-header mb-16">
                                         <div class="feature-icon mr-16">
-                                            <svg width="32" height="32" xmlns="http://www.w3.org/2000/svg">
+                                            <svg width="32" height="32">
                                                 <g fill-rule="nonzero" fill="none">
                                                     <path d="M7 8H1a1 1 0 0 1-1-1V1a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v6a1 1 0 0 1-1 1zM19 8h-6a1 1 0 0 1-1-1V1a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v6a1 1 0 0 1-1 1z" fill="#4353FF"/>
                                                     <path d="M19 20h-6a1 1 0 0 1-1-1v-6a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v6a1 1 0 0 1-1 1z" fill="#43F1FF"/>
@@ -364,7 +364,7 @@
                                 <div class="feature-inner">
                                     <div class="feature-header mb-16">
                                         <div class="feature-icon mr-16">
-                                            <svg width="32" height="32" xmlns="http://www.w3.org/2000/svg">
+                                            <svg width="32" height="32">
                                                 <g fill-rule="nonzero" fill="none">
                                                     <path d="M4 12H0V5a5.006 5.006 0 0 1 5-5h7v4H5a1 1 0 0 0-1 1v7z" fill="#43F1FF"/>
                                                     <path d="M32 12h-4V5a1 1 0 0 0-1-1h-7V0h7a5.006 5.006 0 0 1 5 5v7zM12 32H5a5.006 5.006 0 0 1-5-5v-7h4v7a1 1 0 0 0 1 1h7v4z" fill="#4353FF"/>
@@ -381,7 +381,7 @@
                                 <div class="feature-inner">
                                     <div class="feature-header mb-16">
                                         <div class="feature-icon mr-16">
-                                            <svg width="32" height="32" xmlns="http://www.w3.org/2000/svg">
+                                            <svg width="32" height="32">
                                                 <g fill="none" fill-rule="nonzero">
                                                     <path d="M16 9c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4z" fill="#4353FF"/>
                                                     <path d="M27 9c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4z" fill="#43F1FF"/>
@@ -403,7 +403,7 @@
         </main>
         <footer class="site-footer">
             <div class="footer-bg">
-                <svg width="385" height="305" xmlns="http://www.w3.org/2000/svg">
+                <svg width="385" height="305">
                     <defs>
                         <linearGradient x1="50%" y1="34.994%" x2="50%" y2="97.738%" id="footer-bg">
                             <stop stop-color="#151616" offset="0%"/>
@@ -414,7 +414,7 @@
                 </svg>
             </div>
             <div class="footer-dots is-moving-object is-translating" data-translating-factor="160">
-                <svg width="69" height="91" xmlns="http://www.w3.org/2000/svg">
+                <svg width="69" height="91">
                     <g fill="#43F1FF" fill-rule="evenodd">
                         <path d="M37.105 41.007l-2.9 1.334-.786 2.823.926 2.689 2.76 1.154 2.6-1.31 1.714-2.533-1.296-2.94z"/>
                         <path fill-opacity=".64" d="M63.109 27.24l-1.45.666-.394 1.412.464 1.344 1.38.577 1.3-.655.856-1.266-.647-1.47z"/>
@@ -434,7 +434,7 @@
                         <li>
                             <a href="#">
                                 <span class="screen-reader-text">Facebook</span>
-                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="16" height="16">
                                     <path d="M6.023 16L6 9H3V6h3V4c0-2.7 1.672-4 4.08-4 1.153 0 2.144.086 2.433.124v2.821h-1.67c-1.31 0-1.563.623-1.563 1.536V6H13l-1 3H9.28v7H6.023z" fill="#FFFFFF"/>
                                 </svg>
                             </a>
@@ -442,7 +442,7 @@
                         <li>
                             <a href="#">
                                 <span class="screen-reader-text">Twitter</span>
-                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="16" height="16">
                                     <path d="M16 3c-.6.3-1.2.4-1.9.5.7-.4 1.2-1 1.4-1.8-.6.4-1.3.6-2.1.8-.6-.6-1.5-1-2.4-1-1.7 0-3.2 1.5-3.2 3.3 0 .3 0 .5.1.7-2.7-.1-5.2-1.4-6.8-3.4-.3.5-.4 1-.4 1.7 0 1.1.6 2.1 1.5 2.7-.5 0-1-.2-1.5-.4C.7 7.7 1.8 9 3.3 9.3c-.3.1-.6.1-.9.1-.2 0-.4 0-.6-.1.4 1.3 1.6 2.3 3.1 2.3-1.1.9-2.5 1.4-4.1 1.4H0c1.5.9 3.2 1.5 5 1.5 6 0 9.3-5 9.3-9.3v-.4C15 4.3 15.6 3.7 16 3z" fill="#FFFFFF"/>
                                 </svg>
                             </a>
@@ -450,7 +450,7 @@
                         <li>
                             <a href="#">
                                 <span class="screen-reader-text">Google</span>
-                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="16" height="16">
                                     <path d="M7.9 7v2.4H12c-.2 1-1.2 3-4 3-2.4 0-4.3-2-4.3-4.4 0-2.4 2-4.4 4.3-4.4 1.4 0 2.3.6 2.8 1.1l1.9-1.8C11.5 1.7 9.9 1 8 1 4.1 1 1 4.1 1 8s3.1 7 7 7c4 0 6.7-2.8 6.7-6.8 0-.5 0-.8-.1-1.2H7.9z" fill="#FFFFFF"/>
                                 </svg>
                             </a>
