Added meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MAVN Click Finder - URL Shortener</title>
+    <title>MAVN Click Finder - Simple URL Shortener</title>
+    <meta name="title" content="MAVN Click Finder - Simple URL Shortener">
+    <meta name="description" content="MAVN Click Finder is a free, simple, and easy-to-use tool to shorten any long URL into something easier to remember and share.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mavn.cf/">
+    <meta property="og:title" content="MAVN Click Finder - Simple URL Shortener">
+    <meta property="og:description" content="MAVN Click Finder is a free, simple, and easy-to-use tool to shorten any long URL into something easier to remember and share.">
+    <meta property="og:image" content="https://mavn.cf/img/social.jpg">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://mavn.cf/">
+    <meta property="twitter:title" content="MAVN Click Finder - Simple URL Shortener">
+    <meta property="twitter:description" content="MAVN Click Finder is a free, simple, and easy-to-use tool to shorten any long URL into something easier to remember and share.">
+    <meta property="twitter:image" content="https://mavn.cf/img/social.jpg">
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,400i,500,700|Titillium+Web:600" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/head.js"></script>
