Updated social links

--- a/index.html
+++ b/index.html
@@ -430,26 +430,27 @@
                     <div class="footer-copyright">&copy; 2020 Fact Maven. All Rights Reserved.</div>
                     <ul class="footer-social-links list-reset">
                         <li>
-                            <a href="#">
-                                <span class="screen-reader-text">Facebook</span>
-                                <svg width="16" height="16">
-                                    <path d="M6.023 16L6 9H3V6h3V4c0-2.7 1.672-4 4.08-4 1.153 0 2.144.086 2.433.124v2.821h-1.67c-1.31 0-1.563.623-1.563 1.536V6H13l-1 3H9.28v7H6.023z" fill="#FFFFFF"/>
+                            <a href="https://github.com/factmaven">
+                                <span class="screen-reader-text">GitHub</span>
+                                <svg fill="#ffffff" width="25" height="25" viewBox="0 0 800 800">
+                                    <path d="M400 139c144 0 260 116 260 260 0 115-75 213-178 247-9 3-17-2-17-13v-71c0-35-18-48-18-48 57-6 119-28 119-128 0-44-27-70-27-70s14-29-2-69c0 0-22-7-72 27-42-12-88-12-130 0-50-34-72-27-72-27-16 40-2 69-2 69s-27 26-27 70c0 100 62 122 119 128 0 0-14 10-17 35-15 7-53 18-76-22 0 0-13-25-39-27 0 0-26 0-2 16 0 0 17 8 29 38 0 0 16 51 88 35v44c0 11-9 16-18 13-103-34-178-132-178-247 0-144 116-260 260-260z"/>
                                 </svg>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <span class="screen-reader-text">Twitter</span>
-                                <svg width="16" height="16">
-                                    <path d="M16 3c-.6.3-1.2.4-1.9.5.7-.4 1.2-1 1.4-1.8-.6.4-1.3.6-2.1.8-.6-.6-1.5-1-2.4-1-1.7 0-3.2 1.5-3.2 3.3 0 .3 0 .5.1.7-2.7-.1-5.2-1.4-6.8-3.4-.3.5-.4 1-.4 1.7 0 1.1.6 2.1 1.5 2.7-.5 0-1-.2-1.5-.4C.7 7.7 1.8 9 3.3 9.3c-.3.1-.6.1-.9.1-.2 0-.4 0-.6-.1.4 1.3 1.6 2.3 3.1 2.3-1.1.9-2.5 1.4-4.1 1.4H0c1.5.9 3.2 1.5 5 1.5 6 0 9.3-5 9.3-9.3v-.4C15 4.3 15.6 3.7 16 3z" fill="#FFFFFF"/>
+                            <a href="https://www.linkedin/com/company/factmaven/">
+                                <span class="screen-reader-text">LinkedIn</span>
+                                <svg fill="#ffffff" width="25" height="25" viewBox="0 0 800 800">
+                                    <path d="M268 629h-97V319h97zm157 0h-97V319h93v42h1q31-50 93-50 114 0 114 133v185h-96V466q0-70-49-70-59 0-59 69z"/>
+                                    <circle cx="219" cy="220" r="56"/>
                                 </svg>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="https://g.page/factmaven">
                                 <span class="screen-reader-text">Google</span>
-                                <svg width="16" height="16">
-                                    <path d="M7.9 7v2.4H12c-.2 1-1.2 3-4 3-2.4 0-4.3-2-4.3-4.4 0-2.4 2-4.4 4.3-4.4 1.4 0 2.3.6 2.8 1.1l1.9-1.8C11.5 1.7 9.9 1 8 1 4.1 1 1 4.1 1 8s3.1 7 7 7c4 0 6.7-2.8 6.7-6.8 0-.5 0-.8-.1-1.2H7.9z" fill="#FFFFFF"/>
+                                <svg fill="#ffffff" width="25" height="25" viewBox="0 0 800 800">
+                                    <path d="M651 363c23 168-80 297-246 297-144 0-260-116-260-260s116-260 260-260c70 0 130 26 175 68l-71 68c-19-19-53-40-104-40-89 0-161 73-161 164s72 164 161 164c104 0 142-74 148-112H405v-89h246z"/>
                                 </svg>
                             </a>
                         </li>
