Rename error message

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 <div class="control control-expanded">
                                     <input class="input" type="url" id="urlinput" placeholder="Paste your long URL">
                                     <input class="input" type="text" maxlength=20 id="custominput" placeholder="Custom alias (optional)">
-                                    <p id="erbox"></p>                             
+                                    <p id="url-error"></p>                             
                                 </div>
                                 <div class="control">
                                     <button class="button button-primary button-block" type="button" id="sbtn">Shorten URL</button>
