--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 <div class="control control-expanded">
                                     <input class="input" type="url" id="long-url" placeholder="Paste your long URL">
                                     <input class="input" type="text" maxlength="20" id="url-alias" placeholder="Custom alias (optional)">
-                                    <p id="error-message" style="color:red;"></p>                             
+                                    <p id="error-message"></p>                             
                                 </div>
                                 <div class="control">
                                     <button class="button button-primary button-block" type="button" id="submit-button">Shorten URL</button>
@@ -61,7 +61,7 @@
                             </div>
                             <div class="form" style="margin-bottom : 0px !important;">
                                 <input class="input" type="text" id="short-url" placeholder="Your new URL here">
-                                <p id="sucess-message" style="color:#43F1FF"></p>
+                                <p id="sucess-message"></p>
                             </div>
                         </div>
                         <div class="hero-illustration">
