Set short-url input to disabled

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 </div>
                             </div>
                             <div class="form" style="margin-bottom : 0px !important;">
-                                <input class="input" type="text" id="short-url" placeholder="Your new URL here">
+                                <input class="input" type="text" id="short-url" placeholder="Your new short URL" disabled>
                                 <p id="sucess-message"></p>
                             </div>
                         </div>
