--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             </div>
         </footer>
     </div>
-    <script src="js/index.js"></script>
+    <script src="js/url-shortener.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
