Made input required

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <p class="hero-paragraph is-revealing">MAVN Click Finder (.cf) is a free, simple, and easy-to-use tool to shorten any long URL into something easier to remember and share.</p>
                             <div class="hero-form field field-grouped is-revealing">
                                 <div class="control control-expanded">
-                                    <input class="input" type="url" id="long-url" placeholder="Paste your long URL">
+                                    <input class="input" type="url" id="long-url" placeholder="Paste your long URL" required>
                                     <input class="input" type="text" maxlength="20" id="url-alias" placeholder="Custom alias (optional)">
                                     <p id="error-message"></p>
                                 </div>
