Added link to title

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <meta property="twitter:title" content="Simple URL Shortener - MAVN Click Finder">
     <meta property="twitter:description" content="MAVN Click Finder is a free, simple, and easy-to-use tool to shorten any long URL into something easier to remember and share.">
     <meta property="twitter:image" content="https://mavn.cf/img/social.jpg">
-    <link href="https://fonts.googleapis.com/css?family=Heebo:400,400i,500,700|Titillium+Web:600" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/head.js"></script>
 </head>
@@ -26,8 +25,8 @@
         <header class="site-header">
             <div class="container">
                 <div class="site-header-inner">
-                    <div class="brand header-brand">
-                        <h1 class="m-0">MAVN</h1>
+                    <div class="header-links">
+                        <h1 class="m-0"><a href="/">MAVN</a></h1>
                     </div>
                 </div>
             </div>
