--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <meta property="twitter:title" content="Simple URL Shortener - MAVN Click Finder">
     <meta property="twitter:description" content="MAVN Click Finder is a free, simple, and easy-to-use tool to shorten any long URL into something easier to remember and share.">
     <meta property="twitter:image" content="https://mavn.cf/img/social.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
+    <link rel="manifest" href="img/icons/site.webmanifest">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/head.js"></script>
 </head>
