Changed footer disclaimer

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 </div>
                 <div class="container">
                     <div class="site-footer-inner has-top-divider">
-                        <p>URL references are stored on a <a href="https://github.com/vasanthv/jsonbox" target="_blank" title="jsonbox">third-party public API</a>, please don't submit links that are sensitive.</p>
+                        <p>URL references are on a <a href="https://github.com/vasanthv/jsonbox" target="_blank" title="jsonbox">third-party public API</a>, please don't submit sensitive links.</p>
                         <div class="footer-copyright">
                             &copy;&nbsp;
                             <div id="year"></div>
