--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
         <link rel="manifest" href="img/icons/site.webmanifest">
         <link rel="stylesheet" href="css/style.css">
         <script src="js/head.js"></script>
+        <script type="application/ld+json">
+            {
+                "@context": "http://www.schema.org",
+                "@type": "WebSite",
+                "name": "MAVN",
+                "alternateName": "MAVN URL Shortender",
+                "url": "https://mavn.cf"
+            }
+        </script>
     </head>
     <body class="is-boxed">
         <div class="body-wrap boxed-container">
