Fix schema typo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 "@context": "http://www.schema.org",
                 "@type": "WebSite",
                 "name": "MAVN",
-                "alternateName": "MAVN URL Shortender",
+                "alternateName": "MAVN URL Shortener",
                 "url": "https://mavn.cf"
             }
         </script>
