Add 30 retention notice

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                                 </div>
                                 <input class="input" type="text" id="short-url" placeholder="Your new short URL" disabled>
                                 <p id="sucess-message"></p>
+                                <p class="hero-small is-revealing"><strong>30 Day Retention</strong>: To reduce server load and to keep this service free, short links older than 30 days will be deleted automatically.</p>
                             </div>
                             <div class="hero-illustration">
                                 <div class="hero-bg">
